force-app/main/default/objects/Shail_Estimate__c/Shail_Estimate__c.object-meta.xml
<CustomObject>
    <label>Straight Hail Estimate</label>
    <nameField>
        <displayFormat>SHE-{000000000}</displayFormat>
        <label>Straight Hail Estimate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Straight Hail Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>