force-app/main/default/objects/Shail_Estimate__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Straight Hail Estimates</relationshipLabel>
    <relationshipName>Shail_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>