force-app/main/default/objects/Shail_Estimate__c/fields/Estimate_Name__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Name__c</fullName>
    <label>Estimate Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>